--- a/analysis/paper/references.bib
+++ b/analysis/paper/references.bib
@@ -166,6 +166,20 @@ url = {http://journals.sagepub.com/doi/10.1177/1089253214564192},
 volume = {19},
 year = {2015}
 }
+@article{AliciaWeissgerber2007,
+abstract = {Methylene blue has multiple indications for use, but recently it has been shown to be useful in treating refractory hypotension. Anaphylaxis results in wide-spread vasodilation and hypotension. Epinephrine has been described as the drug of choice in the treatment of hypotension for anaphylaxis, but the increased heart rate may be poorly tolerated by some patients. This case report describes a 79-year-old man with a history of diastolic dysfunction who was admitted for elective coronary artery bypass graft surgery. After induction of general anesthesia, symptoms of anaphy-laxis developed with urticaria and decreased mean arterial pressure. The hypotension was refractory to vasoactive agents and volume repletion. Methylene blue was primed in the cardiopulmonary bypass pump and was effective in restoring hemodynamic stability. Furthermore, the patient required a decreased amount of vasoactive agents in the postoperative course. The suspected mechanism of action of methylene blue is inhibition of the enzyme nitric oxide synthase, which ultimately prevents the smooth muscle dilation that accompanies anaphylaxis. Methylene blue may be a valuable adjunct in the treatment of anaphylaxis and other causes of refractory hypotension.},
+author = {{Alicia Weissgerber}, LT J},
+file = {:home/wolass/Documents/refractoryAnaRev/analysis/Literature/ead146b9776191920818134ea9a76fc47abf.pdf:pdf},
+journal = {AANA Journal August},
+keywords = {anaphylaxis,hypotension,methylene blue,nitric oxide},
+mendeley-groups = {Refractory anaphylaxis},
+number = {4},
+title = {{Methylene Blue for Refractory Hypotension: A Case Report}},
+url = {www.aana.com/aanajournal.aspx},
+volume = {76},
+year = {2007}
+}
+
 @article{Sampson2006,
 abstract = {There is no universal agreement on the definition of anaphylaxis or the criteria for diagnosis. In July 2005, the National Institute of Allergy and Infectious Disease and Food Allergy and Anaphylaxis Network convened a second meeting on anaphylaxis, which included representatives from 16 different organizations or government bodies, including representatives from North America, Europe, and Australia, to continue working toward a universally accepted definition of anaphylaxis, establish clinical criteria that would accurately identify cases of anaphylaxis with high precision, further review the evidence on the most appropriate management of anaphylaxis, and outline the research needs in this area. Copyright {\textcopyright} 2006 American Academy of Allergy, Asthma and Immunology.},
 author = {Sampson, Hugh A. and Mu{\~{n}}oz-Furlong, Anne and Campbell, Ronna L. and Adkinson, N. Franklin and {Allan Bock}, S. and Branum, Amy and Brown, Simon G.A. and Camargo, Carlos A. and Cydulka, Rita and Galli, Stephen J. and Gidudu, Jane and Gruchalla, Rebecca S. and Harlor, Allen D. and Hepner, David L. and Lewis, Lawrence M. and Lieberman, Phillip L. and Metcalfe, Dean D. and O'Connor, Robert and Muraro, Antonella and Rudman, Amanda and Schmitt, Cara and Scherrer, Debra and Simons, F. Estelle and Thomas, Stephen and Wood, Joseph P. and Decker, Wyatt W.},
@@ -200,6 +214,23 @@ url = {http://dx.doi.org/10.1016/j.anai.2015.12.028 http://linkinghub.elsevier.c
 volume = {116},
 year = {2016}
 }
+@article{Hussain2008,
+abstract = {Severe anaesthetic anaphylaxis is relatively uncommon. Oxygen, fluids and epinephrine are considered to be the mainstay for treatment of cardiovascular collapse and current guidelines for the management of anaphylaxis list only epinephrine as a vasopressor to use in the event of a cardiovascular collapse. Recently, evidence has emerged in the support of the use of vasopressin in cardiopulmonary resuscitation; it is also recommended for the treatment of ventricular fibrillation, septic shock and post-cardiopulmonary bypass distribution shock. Currently, there is no algorithm or guideline for the management of anaphylaxis that include the use of vasopressin. We report a 24-year-old woman who developed severe anaphylactic shock at induction of anaesthesia while undergoing laparoscopic cholecystectomy. Circulation shock was refractory to epinephrine and high doses of pure alpha-agonist phenylephrine and norepinephrine. Single intravenous dose of two units of vasopressin re-established normal circulation and blood pressure.},
+author = {Hussain, Aziza Mohammad and Yousuf, B. and Khan, M. A. and Khan, F. H. and Khan, F. A.},
+file = {:home/wolass/Documents/refractoryAnaRev/analysis/Literature/4909cr3.pdf:pdf},
+isbn = {0037-5675},
+issn = {00375675},
+journal = {Singapore Medical Journal},
+keywords = {Anaphylaxis,Epinephrine,Phenylephrine,Vasopressin},
+mendeley-groups = {Refractory anaphylaxis},
+number = {9},
+pages = {225--228},
+pmid = {18830525},
+title = {{Vasopressin for the management of catecholamine-resistant anaphylactic shock}},
+volume = {49},
+year = {2008}
+}
+
 @misc{Javeed1996,
 abstract = {Allergic reactions, including anaphylactoid shock due to contrast material, are not uncommon. However, persistent anaphylactoid shock refractory to conventional therapy is rare. We present a case of refractory anaphylactoid shock during coronary angiography unresponsive to aggressive standard therapy in a patient on beta-blockers. Significant clinical improvement was noted upon administration of glucagon. Since beta-blockers are commonly used in patients with coronary artery disease, this potentially life-threatening complication has to be kept in mind with any procedure involving contrast media in patients on beta-blockers. Immediate access to glucagon by keeping it in the procedure room may be lifesaving in these situations},
 author = {Javeed, Najam and Javeed, Hayath and Javeed, Shahina and Moussa, Ghias and Wong, Peter and Rezai, Feridoun},
@@ -981,6 +1012,24 @@ year = {2013}
   title = {Anaphylaxis in children and adolescents: The European Anaphylaxis Registry},
   journal = {Journal of Allergy and Clinical Immunology}
 }
+@article{Rodrigues2007,
+abstract = {Nitric oxide has a pathophysiological role in modulating systemic changes associated with anaphylaxis. Nitric oxide synthase inhibitors may exacerbate bronchospasm in anaphylaxis and worsen clinical conditions, with limited roles in anaphylactic shock treatment. The aim here was to report an anaphylaxis case (not anaphylactic shock), reversed by methylene blue (MB), a guanylyl cyclase inhibitor.},
+author = {Rodrigues, Janine Moreira and {Pazin Filho}, Antonio and Rodrigues, Alfredo Jos{\'{e}} and Vicente, Walter Vilella de Andrade and Evora, Paulo Roberto Barbosa},
+doi = {10.1590/S1516-31802007000100012},
+file = {:home/wolass/Documents/refractoryAnaRev/analysis/Literature/a12v1251.pdf:pdf},
+isbn = {1516-3180},
+issn = {15163180},
+journal = {Sao Paulo Medical Journal},
+keywords = {Anaphylaxis,Cyclic GMP,Guanylate cyclase,Methylene blue,Nitric oxide},
+mendeley-groups = {Refractory anaphylaxis},
+number = {1},
+pages = {60--62},
+pmid = {17505688},
+title = {{Methylene blue for clinical anaphylaxis treatment: A case report}},
+volume = {125},
+year = {2007}
+}
+
 @article{GonzlezPrez2010,
   doi = {10.1016/j.jaci.2010.02.009},
   url = {http://dx.doi.org/10.1016/j.jaci.2010.02.009},
@@ -1115,6 +1164,22 @@ year = {2013}
   author = {M. Worm and A. Moneret-Vautrin and K. Scherer and R. Lang and M. Fernandez-Rivas and V. Cardona and M. L. Kowalski and M. Jutel and I. Poziomkowska-Gesicka and N. G. Papadopoulos and K. Beyer and T. Mustakov and G. Christoff and M. B. Bil{\`{o}} and A. Muraro and J. O. B. Hourihane and L. B. Grabenhenrich},
   title = {First European data from the network of severe allergic reactions ({NORA})},
   journal = {Allergy}
+}
+@article{Grayling2003,
+abstract = {Methylene blue inhibits the enzyme guanylate cyclase, avoiding the cyclic guanosine 3'5'-monophosphate (cGMP)-dependent vasorelaxant effects of nitric oxide vessels. As well as its uses in the treatment of methemoglobinemia and malaria and as a medical dye, methylene blue has been used to treat refractory vasoplegia after cardiopulmonary bypass (CPB), anaphylaxis, and septic shock.1,2 M We describe the first case of methylene blue used in the CPB prime and in the context of refractory hypotension in a patient undergoing valve replacement surgery for infective endocarditis.},
+author = {Grayling, M. and Deakin, C. D.},
+doi = {10.1067/mtc.2003.140},
+file = {:home/wolass/Documents/refractoryAnaRev/analysis/Literature/PIIS0022522302733874.pdf:pdf},
+isbn = {0022-5223},
+issn = {00225223},
+journal = {Journal of Thoracic and Cardiovascular Surgery},
+mendeley-groups = {Refractory anaphylaxis},
+number = {2},
+pages = {426--427},
+pmid = {12579121},
+title = {{Methylene blue during cardiopulmonary bypass to treat refractory hypotension in septic endocarditis}},
+volume = {125},
+year = {2003}
 }
 
 @article{Romano2001,
@@ -1382,6 +1447,24 @@ year = {1977}
   title = {Estrogen increases the severity of anaphylaxis in female mice through enhanced endothelial nitric oxide synthase expression and nitric oxide production},
   journal = {Journal of Allergy and Clinical Immunology}
 }
+@article{Oliveira2003,
+abstract = {BACKGROUND: The purpose of this paper is to propose methylene blue as a lifesaving alternative drug for the treatment of contrast-induced anaphylaxis.$\backslash$n$\backslash$nCASE REPORT: In a cardiovascular catheterization laboratory invasive hemodynamic monitoring was used to document the lifesaving effect of IV bolus injections of 1.5-2 mg/Kg methylene blue solution to treat three patients for anaphylactic shock following radiocontrast injection during coronary angiography. Methylene blue administration was followed by prompt circulatory improvement, leading to hemodynamic stabilization and relief of other anaphylactic symptoms in each case. There were no deaths.$\backslash$n$\backslash$nCONCLUSIONS: Our findings suggest that methylene blue can be lifesaving in anaphylactic shock, notwithstanding some transitory side effects, such as cardiac rhythm disturbances and chest pain, both of which possibly originate from sudden myocardial perfusion deficits.},
+author = {{Oliveira Neto}, Antonio M and Duarte, Neison M and Vicente, Walter V a and Viaro, Fernanda and Evora, Paulo R B},
+file = {:home/wolass/Documents/refractoryAnaRev/analysis/Literature/13384.pdf:pdf},
+isbn = {1234-1010 (Print)$\backslash$r1234-1010 (Linking)},
+issn = {1234-1010},
+journal = {Medical science monitor : international medical journal of experimental and clinical research},
+keywords = {Anaphylaxis,Anaphylaxis: chemically induced,Contrast Media,Contrast Media: adverse effects,Cyclic GMP,Cyclic GMP: metabolism,Enzyme Inhibitors,Enzyme Inhibitors: therapeutic use,Humans,Methylene Blue,Methylene Blue: therapeutic use,Nitric Oxide,Nitric Oxide: metabolism},
+mendeley-groups = {Refractory anaphylaxis},
+number = {11},
+pages = {CS102--6},
+pmid = {14586280},
+title = {{Methylene blue: an effective treatment for contrast medium-induced anaphylaxis.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/14586280},
+volume = {9},
+year = {2003}
+}
+
 @article{Turner2015,
   doi = {10.1016/j.jaci.2014.10.021},
   url = {http://dx.doi.org/10.1016/j.jaci.2014.10.021},
@@ -1602,6 +1685,23 @@ url = {http://dx.doi.org/10.1016/j.athoracsur.2008.07.017},
 volume = {87},
 year = {2009}
 }
+@article{Higgins1999,
+author = {Higgins, D J and Gayatri, P.},
+doi = {10.1093/bja/50.8.863},
+file = {:home/wolass/Downloads/Higgins{\_}et{\_}al-1999-Anaesthesia.pdf:pdf},
+issn = {0003-2409},
+journal = {Anaesthesia},
+mendeley-groups = {Refractory anaphylaxis},
+month = {nov},
+number = {11},
+pages = {1126},
+pmid = {10540117},
+title = {{Methoxamine in the management of severe anaphylaxis.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/10540117},
+volume = {54},
+year = {1999}
+}
+
 @article{Heytman2004,
 abstract = {Anaphylaxis is an uncommon but serious complication of anaesthesia. Most current guidelines for the management of anaphylaxis list only epinephrine as a vasopressor to use in the event of cardiovascular collapse. We present two cases of anaphylaxis under anaesthesia where return of spontaneous circulation was refractory to epinephrine, but occurred following the administration of the alpha-agonist metaraminol. Potential advantages and disadvantages of using epinephrine in this setting, the role of alpha-agonists and some potential mechanisms accounting for their role in successful management are reviewed.},
 author = {Heytman, M. and Rainbird, Alan},
@@ -1675,6 +1775,20 @@ file = {::},
 mendeley-groups = {Refractory anaphylaxis},
 title = {{The diagnosis and management of anaphylaxis: An updated practice parameter}},
 url = {https://pdfs.semanticscholar.org/ff0c/b81c88a48ecc2087ad9c3d431a50258e6fe7.pdf}
+}
+@article{Schummer2004,
+author = {Schummer, Wolfram and Schummer, Claudia and Wippermann, Jens and Fuchs, Juergen},
+issn = {0003-3022},
+journal = {Anesthesiology},
+mendeley-groups = {Refractory anaphylaxis},
+month = {oct},
+number = {4},
+pages = {1025--7},
+pmid = {15448540},
+title = {{Anaphylactic shock: is vasopressin the drug of choice?}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/15448540},
+volume = {101},
+year = {2004}
 }
 
 
@@ -1814,6 +1928,25 @@ url = {http://content.wkhealth.com/linkback/openurl?sid=WKPTLP:landingpage{\&}an
 volume = {14},
 year = {2014}
 }
+
+@article{Liang2008,
+abstract = {BACKGROUND Lymphazurin 1{\%} blue dye can cause a severe anaphylactic reaction in approximately 1-3{\%} of patients. CASE PRESENTATION We describe a case of intraoperative anaphylaxis resulting from Lymphazurin 1{\%} blue dye. A 48-year old woman undergoing a mastectomy with sentinel lymph node biopsy experienced a biphasic anaphylactic reaction with two episodes of hypotension at 15 minutes and 2 hours, respectively, after injection of the blue dye. The late phase was initially refractory to epinephrine. CONCLUSION Early recognition, aggressive hemodynamic management, and prolonged monitoring are indicated in these patients to watch for a potential second phase anaphylactic reaction.},
+author = {Liang, Margaret I and Carson, William E and III},
+doi = {10.1186/1477-7819-6-79},
+file = {:home/wolass/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Liang, Carson, III - 2008 - Biphasic anaphylactic reaction to blue dye during sentinel lymph node biopsy.pdf:pdf},
+issn = {1477-7819},
+journal = {World journal of surgical oncology},
+mendeley-groups = {Refractory anaphylaxis},
+month = {jul},
+pages = {79},
+pmid = {18655732},
+publisher = {BioMed Central},
+title = {{Biphasic anaphylactic reaction to blue dye during sentinel lymph node biopsy.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/18655732 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC2518154},
+volume = {6},
+year = {2008}
+}
+
 @article{Nag2017,
 abstract = {We report a case of perianesthetic refractory anaphylactic shock with cefuroxime in a patient with history of penicillin allergy on regular therapy with atenolol, losartan, prazosin and nicardipine. Severe anaphylactic shock was only transiently responsive to 10mL of (1:10,000) epinephrine and needed norepinephrine and dopamine infusion. Supportive therapy with vasopressors and inotropes along with mechanical ventilation for the next 24hours resulted in complete recovery. She was successfully operated upon 2 weeks later with the same anesthetic drugs but intravenous ciprofloxacin as the alternative antibiotic for perioperative prophylaxis.},
 author = {Nag, Deb Sanjay and Samaddar, Devi Prasad and Kant, Shashi and Mahanty, Pratap Rudra},
@@ -2193,6 +2326,23 @@ url = {https://journals.viamedica.pl/anaesthesiology{\_}intensivetherapy/article
 volume = {48},
 year = {2016}
 }
+@article{Allen2000,
+author = {Allen, S. J. and Gallagher, A. and Paxton, L. D.},
+doi = {10.1046/j.1365-2044.2000.01798-15.x},
+file = {:home/wolass/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Allen, Gallagher, Paxton - 2000 - Anaphylaxis to rocuronium.pdf:pdf},
+issn = {0003-2409},
+journal = {Anaesthesia},
+mendeley-groups = {Refractory anaphylaxis},
+month = {dec},
+number = {12},
+pages = {1223--1224},
+publisher = {Blackwell Science Ltd},
+title = {{Anaphylaxis to rocuronium}},
+url = {http://doi.wiley.com/10.1046/j.1365-2044.2000.01798-15.x},
+volume = {55},
+year = {2000}
+}
+
 @article{Koplin2011,
 abstract = {The purpose of the present review is to describe the epidemiology of food-induced, medication-induced, drug-induced, and insect sting-induced anaphylaxis; to summarize recent changes in the incidence of anaphylaxis internationally; and to discuss recent insights into potential risk factors for anaphylaxis.},
 author = {Koplin, Jennifer J and Martin, Pamela E and Allen, Katrina J},
@@ -3058,6 +3208,40 @@ url = {http://www.ncbi.nlm.nih.gov/pubmed/3767045},
 volume = {65},
 year = {1986}
 }
+@article{Moritoki1992,
+author = {Moritoki, Hideki and Hisayama, Tetsuhiro and Takeuchi, Shougo and Miyano, Hiroaki and Kondoh, Wataru},
+doi = {10.1111/j.1476-5381.1992.tb14486.x},
+file = {:home/wolass/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Moritoki et al. - 1992 - Involvement of nitric oxide pathway in the PAF-induced relaxation of rat thoracic aorta.pdf:pdf},
+issn = {00071188},
+journal = {British Journal of Pharmacology},
+keywords = {NG‐nitro l‐arginine (l‐NNA),PAF,aging,cyclic GMP,haemoglobin,methylene blue,nitric oxide,relaxation},
+mendeley-groups = {Refractory anaphylaxis},
+month = {sep},
+number = {1},
+pages = {196--201},
+publisher = {Blackwell Publishing Ltd},
+title = {{Involvement of nitric oxide pathway in the PAF-induced relaxation of rat thoracic aorta}},
+url = {http://doi.wiley.com/10.1111/j.1476-5381.1992.tb14486.x},
+volume = {107},
+year = {1992}
+}
+
+@article{Gibbs2003,
+abstract = {We describe a patient who developed a type I anaphylactic reaction to intravenous cefazolin. The patient had no known drug allergies and had previously received intraoperative intravenous cefazolin 2 months prior without any problems. Forty-fives after receiving cefazolin 1 g i.v. and while fully awake, the patient experienced shortness of breath, became unconscious, and then suffered a cardiac arrest. Resuscitation included endotracheal intubation, external cardiac compression, electrical defibrillation and multiple large doses of epinephrine, atropine, and sodium bicarbonate over the course of 2.5 h and three cardiac arrests. Nevertheless, the patient fully recovered. The intent of this case report is to address widely held concerns regarding cross-reactivity of cephalosporin, particularly cefazolin, to penicillin, the legitimacy of test dosing as a means to safely identify patients who will have an allergic reaction to cephalosporins and comment on patient-related predictors of survival following cardiopulmonary resuscitation and the good outcome in this case.},
+author = {Gibbs, M W and Kuczkowski, K M and Benumof, J L},
+issn = {0001-5172},
+journal = {Acta anaesthesiologica Scandinavica},
+mendeley-groups = {Refractory anaphylaxis},
+month = {feb},
+number = {2},
+pages = {230--2},
+pmid = {12631055},
+title = {{Complete recovery from prolonged cardio-pulmonary resuscitation following anaphylactic reaction to readministered intravenous cefazolin.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/12631055},
+volume = {47},
+year = {2003}
+}
+
 @article{Raft2012,
 author = {Raft, J. and Leclercq, M. and Longrois, D. and Meistelman, C.},
 doi = {10.1016/j.annfar.2011.10.023},
@@ -3071,6 +3255,22 @@ title = {{R{\'{e}}cup{\'{e}}ration h{\'{e}}modynamique et ventilatoire rapide ap
 url = {http://linkinghub.elsevier.com/retrieve/pii/S0750765811004436},
 volume = {31},
 year = {2012}
+}
+@article{Liu2005,
+abstract = {OBJECTIVE: To report a rare but severe reaction of refractory anaphylactic shock with ketoconazole treatment-associated hypotensive episodes in an elderly patient. CASE SUMMARY: A 72-year-old woman received antifungal therapy for her almost completely occluded cornea infected with Candida albicans. She was initially prescribed oral ketoconazole 200 mg twice daily. She developed hypotension over the first 2 days of therapy (BP 136/82 mm Hg at baseline; 90/50 mm Hg on day 2). Severe hypotension (BP 90/49 mm Hg) unresponsive to fluid therapy or high-dose dopamine developed on day 4 of therapy. An invasive Swan-Ganz catheterization study showed a very low level of peripheral vascular resistance with high cardiac output index without clinical signs of infection. When laboratory tests showed a high level of plasma tryptase, anaphylactic redistribution shock was diagnosed. Her vital signs became more stable after treatment with hydrocortisone and epinephrine infusion. She was discharged in good condition after 24 hours of observation. DISCUSSION: As of December 2004, refractory anaphylactic shock resulting from ketoconazole use had not been reported. The events of hypotension were strongly associated with the intake of ketoconazole. The hemodynamic results obtained with Swan-Ganz catheterization were compatible with anaphylactic shock. The Naranjo probability scale showed a probable association of the adverse event with ketoconazole. CONCLUSIONS: Ketoconazole may cause severe anaphylactic shock even when taken orally. Invasive catheterization and elevated tryptase levels can provide important information in the management of anaphylactic shock},
+author = {Liu, Ping Yen and Lee, Cheng Han and Lin, Li Jen and Chen, Jyh Hong},
+doi = {10.1345/aph.1E465},
+file = {:home/wolass/Documents/refractoryAnaRev/analysis/Literature/Refractory{\_}Anaphylactic{\_}Shock{\_}Associated{\_}with{\_}Keto.pdf:pdf},
+issn = {10600280},
+journal = {Annals of Pharmacotherapy},
+keywords = {Anaphylactic shock,Ketoconazole,Tryptase},
+mendeley-groups = {Refractory anaphylaxis},
+number = {3},
+pages = {547--550},
+pmid = {24969},
+title = {{Refractory anaphylactic shock associated with ketoconazole treatment}},
+volume = {39},
+year = {2005}
 }
 
 @article{Houser2015,
